--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     Welcome to my page! 
+    <h1>Mya M</h1>
+    <h2>About</h2>
+    <p>I was born in Detroit, Michigan. I married my high school sweetheart. We have two beautiful children. We call them the perfect pair since we have a boy and a girl.  </p>
+    <h2> Experience</h2>
+        <li>Software QA Analyst </li>
+        <li>Group project that created <a>nonprofit website</a></li>
+        <li>Copywriter</li>
+
+    <h2>Connect</h2>
+        <a href = "https://www.linkedin.com/in/myaskairos/"> LinkedIn</a>
+        <a href = "https://github.com/myaskairos">Github</a>
+        <a href = "https://x.com/myas_kairos">Twitter</a>
 </body>
 </html>
