styling added, accidentally added to lesson 9 first. reuploading to lesson 10

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+    <title>Mya's Portfolio Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     Welcome to my page! 
     <h1>Mya M</h1>
-    <section id = "About">
-    <h2>About</h2>
-    <p>I was born in Detroit, Michigan. I married my high school sweetheart. We have two beautiful children. We call them the perfect pair since we have a boy and a girl.  </p>
+
+    <section id="About">
+        <h2>About</h2>
+        <p>I was born in Detroit, Michigan. I married my high school sweetheart. We have two beautiful children. We call them the perfect pair since we have a boy and a girl.</p>
     </section>
-    <section id = "Experience">
-    <h2> Experience</h2>
-        <li>Software QA Analyst </li>
-        <li>Group project that created <a>nonprofit website</a></li>
-        <li>Copywriter</li>
+    
+    <section id="Experience">
+        <h2>Experience</h2>
+        <ul>
+            <li>Software QA Analyst </li>
+            <li>Group project that created <a>nonprofit website</a></li>
+            <li>Copywriter</li>
+        </ul>
     </section>
-    <section id = "Connect">
+    <section id="Connect">
     <h2>Connect</h2>
-        <a href = "https://www.linkedin.com/in/myaskairos/"> LinkedIn</a>
-        <a href = "https://github.com/myaskairos">Github</a>
-        <a href = "https://x.com/myas_kairos">Twitter</a>
+        <a href = "https://www.linkedin.com/in/myaskairos/" class="fa fa-linkedin"> Linkedin </a>
+        <a href = "https://github.com/myaskairos" class="fa fa-github"> Github</a>
+        <a href = "https://x.com/myas_kairos" class="fa fa-twitter"> Twitter</a>
     </section>
 </body>
 </html>
