lots of expansion on jobs section, added css for different screens, added nav bar. Added place holder links for websites/projects, adjusted connect icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <body>
     Welcome to my page! 
     <h1>Mya M</h1>
+    <nav id="Nav">
+        <ul>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Experience">Experience</a></li>
+            <li><a href="#Skills">Skills</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Connect">Connect</a></li>
+        </ul>
+    </nav>
 
     <section id="About">
         <h2>About</h2>
@@ -22,16 +31,43 @@
     <section id="Experience">
         <h2>Experience</h2>
         <ul>
-            <li>Software QA Analyst </li>
-            <li>Group project that created <a>nonprofit website</a></li>
-            <li>Copywriter</li>
+            <li>
+                <div class="job-container">
+                    <div class="job-title">Software QA Analyst</div>
+                    <div class="job-date">July 2024 - Present</div>
+                </div>
+                <div class="job-description">Job description</div>
+            </li>
+            <li>
+                <div class="job-container">
+                    <div class="job-title">Group project that created <a href="#">nonprofit website</a></div>
+                    <div class="job-date">Sep 2019 - Dec 2019</div>
+                </div>
+                <div class="job-description">Project description</div>
+            </li>
+            <li>
+                <div class="job-container">
+                    <div class="job-title">Copywriter</div>
+                    <div class="job-date">Jun 2018 - Aug 2019</div>
+                </div>
+                <div class="job-description">Job description</div>
+            </li>
         </ul>
     </section>
+    
+    <section id="Skills">
+        <h2>Skills</h2>
+    </section>
+    <section id="Projects">
+        <h2>Projects</h2>
+    </section>
     <section id="Connect">
-    <h2>Connect</h2>
+    <h2 id="Connect">Connect</h2>
+    <ul>
         <a href = "https://www.linkedin.com/in/myaskairos/" class="fa fa-linkedin"> Linkedin </a>
         <a href = "https://github.com/myaskairos" class="fa fa-github"> Github</a>
         <a href = "https://x.com/myas_kairos" class="fa fa-twitter"> Twitter</a>
+    </ul>
     </section>
 </body>
 </html>
