--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
     <section id="About">
         <h2>About</h2>
-        <p>I was born in Detroit, Michigan. I married my high school sweetheart. We have two beautiful children. We call them the perfect pair since we have a boy and a girl.</p>
+        <p>I was born in Detroit, Michigan. I met the love of my life in high school and now we have two beautiful children. We were blessed with the perfect pair; a boy and a girl. I got my first tech job as a Software QA and fell in love with it. My goal is to learn more programming language and either become a software engineer or a well versed tester. My brain is always searching for more things to learn and I've no choice but to feed the beast! </p>
+        <ul class="facts">Fun facts!
+          <li>My favorite book is "The invention of Hugo Cabret" but it's a close tie with "To Kill A Mockingbird". </li>
+          <li> I love swimming and pretty much getting into any form of water. If I could choose any place to be the answer will always be near the water. </li>
+        </ul>
     </section>
     
     <section id="Experience">
@@ -36,21 +40,21 @@
                     <div class="job-title">Software QA Analyst</div>
                     <div class="job-date">July 2024 - Present</div>
                 </div>
-                <div class="job-description">Job description</div>
+                <div class="job-description">Checking for bugs and inconsistencies across websites & different platforms. Verifying grammar, link placements, and tabbing order just to name a few things done to ensure a positiver user experience. I also make sure websites are within limits for section 508 accesssibility guidelines.</div>
             </li>
             <li>
                 <div class="job-container">
-                    <div class="job-title">Group project that created <a href="#">nonprofit website</a></div>
+                    <div class="job-title">Group project that created <a href="https://madbemx.github.io/capstone/">nonprofit website</a></div>
                     <div class="job-date">Sep 2019 - Dec 2019</div>
                 </div>
-                <div class="job-description">Project description</div>
+                <div class="job-description">A group effort that involved real world examples of being on a web development team by allowing us to delegate who did what from top to bottom. Each page created by different group members while also collaborating in deciding theme & overall message desired. </div>
             </li>
             <li>
                 <div class="job-container">
                     <div class="job-title">Copywriter</div>
                     <div class="job-date">Jun 2018 - Aug 2019</div>
                 </div>
-                <div class="job-description">Job description</div>
+                <div class="job-description">Developed engaging and persuasive copy for marketing and promotional materials, including advertisements, websites, emails, and social media. Crafted targeted messages to capture audience attention and drive desired actions, such as purchases or sign-ups. Collaborated with marketing teams and clients to ensure content aligns with brand voice and business objectives.</div>
             </li>
         </ul>
     </section>
