--- a/index.html
+++ b/index.html
@@ -73,5 +73,8 @@
         <a href = "https://x.com/myas_kairos" class="fa fa-twitter"> Twitter</a>
     </ul>
     </section>
+    <footer> </footer>
+<script src="js/index.js"></script>
 </body>
+
 </html>
